// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduxFormFieldAdapter should render Popover as invisible if there is an error but the field has not been touched 1`] = `
<Popover
  content="error content"
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottomLeft"
  prefixCls="ant-popover"
  title="error title"
  transitionName="zoom-big"
  trigger="hover"
  visible={false}
>
  <Input
    className=""
    disabled={false}
    meta={
      Object {
        "error": Object {
          "content": "error content",
          "title": "error title",
        },
        "touched": false,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    prefixCls="ant-input"
    type="text"
    value="inputValue"
  />
</Popover>
`;

exports[`reduxFormFieldAdapter should render Popover as visible if there is an error and the field has been touched 1`] = `
<Popover
  content="error content"
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottomLeft"
  prefixCls="ant-popover"
  title="error title"
  transitionName="zoom-big"
  trigger="hover"
  visible={true}
>
  <Input
    className="is-invalid"
    disabled={false}
    meta={
      Object {
        "error": Object {
          "content": "error content",
          "title": "error title",
        },
        "touched": true,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    prefixCls="ant-input"
    type="text"
    value="inputValue"
  />
</Popover>
`;

exports[`reduxFormFieldAdapter should render as expected when there is not an error 1`] = `
<Popover
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  overlayStyle={Object {}}
  placement="bottomLeft"
  prefixCls="ant-popover"
  transitionName="zoom-big"
  trigger="hover"
  visible={false}
>
  <Input
    className=""
    disabled={false}
    meta={
      Object {
        "error": null,
        "touched": false,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    prefixCls="ant-input"
    type="text"
    value="inputValue"
  />
</Popover>
`;
